added imgui docking

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -8,3 +8,28 @@ Pos=720,36
 Size=550,680
 Collapsed=0
 
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][ImGui Demo]
+Pos=0,372
+Size=778,348
+Collapsed=0
+
+[Window][Example: Log]
+Pos=780,19
+Size=500,701
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Test]
+Pos=60,60
+Size=92,48
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0xFA06BC56 Pos=34,76 Size=1280,701 Split=X
+  DockNode  ID=0x00000003 Parent=0xFA06BC56 SizeRef=778,701 CentralNode=1
+  DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=500,701 SelectedTab=0xBF126D42
+
