Hazel now builds as a static library + fixed warnings.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -13,7 +13,8 @@ Size=1280,720
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=0,372
+ViewportPos=337,399
+ViewportId=0x080FC883
 Size=778,348
 Collapsed=0
 
@@ -24,7 +25,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Test]
-Pos=60,60
+Pos=749,62
 Size=92,48
 Collapsed=0
 
