--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -9,13 +9,14 @@ Size=550,680
 Collapsed=0
 
 [Window][DockSpace Demo]
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
 [Window][ImGui Demo]
-ViewportPos=337,399
+ViewportPos=272,505
 ViewportId=0x080FC883
-Size=778,348
+Size=1280,348
 Collapsed=0
 
 [Window][Example: Log]
@@ -30,7 +31,7 @@ Size=92,48
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0xFA06BC56 Pos=34,76 Size=1280,701 Split=X
+DockSpace   ID=0xFA06BC56 Pos=190,232 Size=1280,701 Split=X
   DockNode  ID=0x00000003 Parent=0xFA06BC56 SizeRef=778,701 CentralNode=1
   DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=500,701 SelectedTab=0xBF126D42
 
