Moved OpenGL shader implementation to OpenGLShader class + added more

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -13,8 +13,7 @@ Size=1280,720
 Collapsed=0
 
 [Window][ImGui Demo]
-ViewportPos=1188,658
-ViewportId=0x080FC883
+Pos=920,367
 Size=298,348
 Collapsed=0
 
@@ -27,6 +26,11 @@ DockId=0x00000004,0
 [Window][Test]
 Pos=749,62
 Size=92,48
+Collapsed=0
+
+[Window][Settings]
+Pos=60,60
+Size=496,54
 Collapsed=0
 
 [Docking][Data]
