Upgrade to VS 2019 + Organization

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,20 @@
 *.exe
 *.out
 *.app
-.vs/
+
 Debug
 /bin/
+
+# Binaries
+**/bin/
+!vendor/bin/premake/
+
 bin-int/
 *.user
+
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
