--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=720,36
+ViewportPos=872,541
+ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=0
 
@@ -36,5 +37,5 @@ Collapsed=0
 [Docking][Data]
 DockSpace   ID=0xFA06BC56 Pos=190,232 Size=1280,701 Split=X
   DockNode  ID=0x00000003 Parent=0xFA06BC56 SizeRef=778,701 CentralNode=1
-  DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=500,701 SelectedTab=0xBF126D42
+  DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=500,701
 
