Initial instrumentation work

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -30,8 +30,9 @@ Size=92,48
 Collapsed=0
 
 [Window][Settings]
-Pos=60,60
-Size=496,54
+ViewportPos=756,226
+ViewportId=0x1C33C293
+Size=406,480
 Collapsed=0
 
 [Docking][Data]
