--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -30,9 +30,8 @@ Size=92,48
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=756,226
-ViewportId=0x1C33C293
-Size=406,480
+Pos=674,83
+Size=406,492
 Collapsed=0
 
 [Docking][Data]
