Added textures to batch renderer

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -30,7 +30,8 @@ Size=92,48
 Collapsed=0
 
 [Window][Settings]
-Pos=733,84
+ViewportPos=1187,500
+ViewportId=0x1C33C293
 Size=406,492
 Collapsed=0
 
