--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -10,7 +10,6 @@ Size=550,680
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -31,13 +30,12 @@ Size=92,48
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=569,252
-ViewportId=0x1C33C293
-Size=1217,701
+Pos=1017,5
+Size=258,701
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=164,206 Size=1280,701 CentralNode=1
+DockSpace   ID=0x3BC79352 Pos=34,76 Size=1280,701 CentralNode=1 HiddenTabBar=1 Selected=0x1C33C293
 DockSpace   ID=0xFA06BC56 Pos=190,232 Size=1280,701 Split=X
   DockNode  ID=0x00000003 Parent=0xFA06BC56 SizeRef=778,701 CentralNode=1
   DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=500,701
