--- a/Hazelnut/imgui.ini
+++ b/Hazelnut/imgui.ini
@@ -1,56 +1,58 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1210,900
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=291,283
+ViewportPos=1180,1021
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
+[Window][Settings]
+Pos=874,19
+Size=406,701
+Collapsed=0
+DockId=0x00000004,0
+
 [Window][Viewport]
 Pos=372,24
-Size=466,876
+Size=993,876
 Collapsed=0
-DockId=0x00000001,0
-
-[Window][Settings]
-Pos=1554,19
-Size=366,998
-Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Scene Hierarchy]
-Pos=840,24
-Size=370,439
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Dear ImGui Demo]
-Pos=650,21
-Size=550,680
-Collapsed=0
-
-[Window][Properties]
-Pos=840,465
-Size=370,435
-Collapsed=0
-DockId=0x00000009,0
-
-[Window][Stats]
 Pos=0,24
-Size=370,876
+Size=370,406
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Dear ImGui Demo]
+ViewportPos=336,212
+ViewportId=0xE927CF2F
+Size=1421,1027
+Collapsed=0
+
+[Window][Properties]
+Pos=0,432
+Size=370,468
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Stats]
+Pos=1367,24
+Size=233,876
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=-1705,277 Size=1210,876 Split=X Selected=0x995B0CF8
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=838,701 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=370,701 Selected=0x968648AE
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=466,701 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=912,701 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=366,701 Selected=0x1C33C293
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=370,701 Split=Y Selected=0x9A68760C
-    DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=156,351 Selected=0x9A68760C
-    DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=156,348 Selected=0xC89E3217
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=112,159 Size=1600,876 Split=X Selected=0x995B0CF8
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1365,1094 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=370,696 Split=Y Selected=0x9A68760C
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=593,322 Selected=0x9A68760C
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=593,372 Selected=0xC89E3217
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=993,696 Split=X
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=958,701 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=272,701 Selected=0x1C33C293
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=233,1094 Selected=0x968648AE
 
