--- a/.gitignore
+++ b/.gitignore
@@ -52,4 +52,7 @@ bin-intDebug-windows-x86_64/
 *.json
 *.log
 
-/scripts/__pycache__
+# Directories
+Hazel/vendor/VulkanSDK
+Hazelnut/assets/cache
+scripts/__pycache__
